[gd_scene load_steps=26 format=3 uid="uid://ckkfaih41jhwi"]

[ext_resource type="Script" path="res://scripts/doctor_againstwall.gd" id="1_q365o"]
[ext_resource type="PackedScene" uid="uid://dpi6pyfx816q2" path="res://models/npc/doctor2/doctor2.fbx" id="2_5nc0g"]
[ext_resource type="PackedScene" uid="uid://dycw30nfi3txx" path="res://models/enemys/small_alien/small_alien.fbx" id="3_rytcr"]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_imt6l"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1cgyp"]
animation = &"Root|againstwall"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ndusv"]
animation = &"Root|cower"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kyhch"]
animation = &"Root|die"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wsejs"]
animation = &"Root|idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_atykc"]
animation = &"Root|interact"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_v1m12"]
animation = &"Root|run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5qm2o"]
animation = &"Root|scared"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1savs"]
animation = &"Root|talk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_b57dc"]
animation = &"Root|walk"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_7uw5s"]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_o8sbw"]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_leawl"]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_fpm7b"]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_qtrk6"]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_5nw75"]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_k0enn"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_kppko"]
graph_offset = Vector2(658.861, 95.3383)
nodes/AgainstWall/node = SubResource("AnimationNodeBlend2_imt6l")
nodes/AgainstWall/position = Vector2(1780, 280)
nodes/AnimAgainstWall/node = SubResource("AnimationNodeAnimation_1cgyp")
nodes/AnimAgainstWall/position = Vector2(1540, 500)
nodes/AnimCower/node = SubResource("AnimationNodeAnimation_ndusv")
nodes/AnimCower/position = Vector2(1320, 340)
nodes/AnimDie/node = SubResource("AnimationNodeAnimation_kyhch")
nodes/AnimDie/position = Vector2(1980, 380)
nodes/AnimIdle/node = SubResource("AnimationNodeAnimation_wsejs")
nodes/AnimIdle/position = Vector2(-400, 100)
nodes/AnimInteract/node = SubResource("AnimationNodeAnimation_atykc")
nodes/AnimInteract/position = Vector2(620, 300)
nodes/AnimRun/node = SubResource("AnimationNodeAnimation_v1m12")
nodes/AnimRun/position = Vector2(-40, 260)
nodes/AnimScared/node = SubResource("AnimationNodeAnimation_5qm2o")
nodes/AnimScared/position = Vector2(960, 340)
nodes/AnimTalk/node = SubResource("AnimationNodeAnimation_1savs")
nodes/AnimTalk/position = Vector2(280, 280)
nodes/AnimWalk/node = SubResource("AnimationNodeAnimation_b57dc")
nodes/AnimWalk/position = Vector2(-400, 260)
nodes/Cower/node = SubResource("AnimationNodeBlend2_7uw5s")
nodes/Cower/position = Vector2(1520, 240)
nodes/Die/node = SubResource("AnimationNodeBlend2_o8sbw")
nodes/Die/position = Vector2(2140, 240)
nodes/Interact/node = SubResource("AnimationNodeBlend2_leawl")
nodes/Interact/position = Vector2(800, 220)
nodes/Run/node = SubResource("AnimationNodeBlend2_fpm7b")
nodes/Run/position = Vector2(120, 180)
nodes/Scared/node = SubResource("AnimationNodeBlend2_qtrk6")
nodes/Scared/position = Vector2(1160, 240)
nodes/Talk/node = SubResource("AnimationNodeBlend2_5nw75")
nodes/Talk/position = Vector2(460, 180)
nodes/Walk/node = SubResource("AnimationNodeBlend2_k0enn")
nodes/Walk/position = Vector2(-200, 180)
nodes/output/position = Vector2(2400, 280)
node_connections = [&"AgainstWall", 0, &"Cower", &"AgainstWall", 1, &"AnimAgainstWall", &"Cower", 0, &"Scared", &"Cower", 1, &"AnimCower", &"Die", 0, &"AgainstWall", &"Die", 1, &"AnimDie", &"Interact", 0, &"Talk", &"Interact", 1, &"AnimInteract", &"Run", 0, &"Walk", &"Run", 1, &"AnimRun", &"Scared", 0, &"Interact", &"Scared", 1, &"AnimScared", &"Talk", 0, &"Run", &"Talk", 1, &"AnimTalk", &"Walk", 0, &"AnimIdle", &"Walk", 1, &"AnimWalk", &"output", 0, &"Die"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3wyft"]

[sub_resource type="BoxShape3D" id="BoxShape3D_jl3bb"]
size = Vector3(1, 3, 1)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hmu8m"]
animation = &"Armature|SuckingHead"

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_lnq6v"]
graph_offset = Vector2(-239, 23)
nodes/Animation/node = SubResource("AnimationNodeAnimation_hmu8m")
nodes/Animation/position = Vector2(0, 140)
nodes/output/position = Vector2(600, 140)
node_connections = [&"output", 0, &"Animation"]

[node name="Doctor" type="CharacterBody3D" node_paths=PackedStringArray("animTree") groups=["Entity"]]
script = ExtResource("1_q365o")
animTree = NodePath("AnimTreeDoctor1")

[node name="AnimTreeDoctor1" type="AnimationTree" parent="."]
root_node = NodePath("../Doctor1")
tree_root = SubResource("AnimationNodeBlendTree_kppko")
anim_player = NodePath("../Doctor1/AnimationPlayer")
parameters/AgainstWall/blend_amount = 1.0
parameters/Cower/blend_amount = 0.0
parameters/Die/blend_amount = 0.0
parameters/Interact/blend_amount = 0.0
parameters/Run/blend_amount = 0.0
parameters/Scared/blend_amount = 0.0
parameters/Talk/blend_amount = 0.0
parameters/Walk/blend_amount = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_3wyft")

[node name="Doctor1" parent="." instance=ExtResource("2_5nc0g")]

[node name="Skeleton3D" parent="Doctor1/RootNode/Root" index="0"]
bones/2/rotation = Quaternion(0.0466307, 0.0154832, 0.0130155, 0.998707)
bones/4/rotation = Quaternion(-0.383688, -0.0480967, 0.0467735, 0.921023)
bones/6/rotation = Quaternion(0.732937, 0.00457752, 0.00960422, 0.680214)
bones/6/scale = Vector3(1, 1, 1)
bones/8/rotation = Quaternion(0.436998, 0.206224, 0.0280701, 0.875053)
bones/8/scale = Vector3(1, 1, 1)
bones/10/rotation = Quaternion(0.319528, -0.180019, 0.815757, 0.447253)
bones/10/scale = Vector3(1, 1, 1)
bones/11/rotation = Quaternion(-0.207709, 0.920695, 0.251431, -0.214384)
bones/11/scale = Vector3(1, 1, 1)
bones/12/scale = Vector3(1, 1, 1)
bones/13/rotation = Quaternion(0.00427285, -0.00608814, -0.0430447, 0.999046)
bones/15/rotation = Quaternion(0.098955, -0.0425113, -0.209149, 0.971935)
bones/15/scale = Vector3(1, 1, 1)
bones/16/rotation = Quaternion(0.00595588, -0.00118506, -0.0475486, 0.99885)
bones/18/rotation = Quaternion(0.113048, 0.0266312, -0.155753, 0.980944)
bones/18/scale = Vector3(1, 1, 1)
bones/19/rotation = Quaternion(0.0264896, -0.00226578, -0.0450999, 0.998629)
bones/22/rotation = Quaternion(-0.0242253, -3.67458e-08, -0.12687, 0.991623)
bones/24/scale = Vector3(1, 1, 1)
bones/25/rotation = Quaternion(0.114905, 0.0323059, -0.198275, 0.972852)
bones/25/scale = Vector3(1, 1, 1)
bones/27/rotation = Quaternion(0.06665, -0.0261023, -0.179242, 0.981198)
bones/27/scale = Vector3(1, 1, 1)
bones/28/scale = Vector3(1, 1, 1)
bones/30/rotation = Quaternion(0.709706, 0.417791, -0.347727, 0.448168)
bones/30/scale = Vector3(1, 1, 1)
bones/31/rotation = Quaternion(0.3546, 0.270871, 0.25914, 0.856583)
bones/32/scale = Vector3(1, 1, 1)
bones/33/scale = Vector3(1, 1, 1)
bones/35/scale = Vector3(1, 1, 1)
bones/36/rotation = Quaternion(0.00595451, 0.00118789, 0.0475474, 0.998851)
bones/36/scale = Vector3(1, 1, 1)
bones/38/rotation = Quaternion(0.101404, -0.0285493, 0.160914, 0.98133)
bones/39/rotation = Quaternion(0.0264896, 0.00226482, 0.0451012, 0.998629)
bones/39/scale = Vector3(1, 1, 1)
bones/41/rotation = Quaternion(0.192462, 0.00137248, 0.0675815, 0.978974)
bones/42/rotation = Quaternion(-0.0242243, -9.43416e-07, 0.126871, 0.991623)
bones/42/scale = Vector3(1, 1, 1)
bones/44/scale = Vector3(1, 1, 1)
bones/45/rotation = Quaternion(0.114906, -0.0323063, 0.198275, 0.972851)
bones/45/scale = Vector3(1, 1, 1)
bones/47/rotation = Quaternion(0.0219626, -0.0523891, 0.293435, 0.95429)
bones/47/scale = Vector3(1, 1, 1)
bones/48/rotation = Quaternion(0.00857828, -0.00664023, 0.0232217, 0.999672)
bones/48/scale = Vector3(1, 1, 1)
bones/50/rotation = Quaternion(0.71437, -0.114065, -0.0015718, 0.690407)
bones/51/scale = Vector3(1, 1, 1)
bones/52/rotation = Quaternion(0.145224, -0.00736136, -0.0318337, 0.988859)
bones/52/scale = Vector3(1, 1, 1)
bones/53/rotation = Quaternion(-0.827528, -0.0735471, 0.0741877, 0.55162)
bones/53/scale = Vector3(1, 1, 1)
bones/55/scale = Vector3(1, 1, 1)
bones/57/rotation = Quaternion(0.145224, 0.00736136, 0.0318337, 0.988859)
bones/57/scale = Vector3(1, 1, 1)
bones/58/rotation = Quaternion(-0.830745, -0.0324144, -0.0807924, 0.549804)

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 9
collision_mask = 9

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("BoxShape3D_jl3bb")

[node name="Alien" parent="." instance=ExtResource("3_rytcr")]
unique_name_in_owner = true
transform = Transform3D(0.971417, 2.79397e-08, -0.237381, 0.0614387, 0.965926, 0.251421, 0.229292, -0.258819, 0.938316, -0.0472973, 1.45266, 0.0962968)

[node name="Skeleton3D" parent="Alien/RootNode/Armature" index="0"]
bones/0/position = Vector3(0.000117262, 0.00304637, 0.0253638)
bones/0/rotation = Quaternion(0.981055, -0.0116657, -0.0579265, -0.1845)
bones/2/position = Vector3(-5.8783e-05, -0.00968838, 0.0243161)
bones/2/rotation = Quaternion(0.65275, -0.0784837, -0.0350233, -0.752683)
bones/2/scale = Vector3(1, 1, 0.999993)
bones/3/rotation = Quaternion(0.0771976, -0.0189949, -0.239816, 0.967558)
bones/4/rotation = Quaternion(0.582218, 0.126322, 0.209403, 0.775381)
bones/6/position = Vector3(-5.84811e-05, -0.00958986, 0.0242775)
bones/6/rotation = Quaternion(0.490708, 0.0899278, -0.0387871, 0.865803)
bones/7/rotation = Quaternion(-0.256448, 0.104248, -0.199609, 0.939959)
bones/7/scale = Vector3(1, 1, 1)
bones/8/rotation = Quaternion(-0.618574, -0.299834, 0.0947219, 0.720065)
bones/10/rotation = Quaternion(-0.322215, 0.100013, 0.261732, 0.904252)
bones/10/scale = Vector3(1, 1, 1)
bones/11/rotation = Quaternion(-0.714813, 0.180417, -0.159848, 0.656461)
bones/11/scale = Vector3(1, 1, 1)
bones/13/position = Vector3(0.00426185, 0.00244981, 0.0112299)
bones/13/rotation = Quaternion(0.548918, 0.507839, 0.20449, -0.631642)
bones/14/rotation = Quaternion(0.512353, 0.0596674, -0.0704984, 0.853794)
bones/15/rotation = Quaternion(0.530404, -0.0469945, 0.295998, 0.793)
bones/17/position = Vector3(0.00382859, 0.00199389, 0.0233572)
bones/17/rotation = Quaternion(0.485768, 0.556219, 0.259215, -0.622462)
bones/17/scale = Vector3(1, 1, 1)
bones/18/rotation = Quaternion(0.358305, 0.108292, 0.0373904, 0.926549)
bones/19/rotation = Quaternion(0.668279, -0.0922157, 0.301002, 0.674016)
bones/19/scale = Vector3(1, 1, 1)
bones/21/position = Vector3(0.00662731, 0.00102439, 0.0320714)
bones/21/rotation = Quaternion(0.372569, 0.570179, 0.388699, -0.620484)
bones/21/scale = Vector3(1, 1, 1)
bones/22/rotation = Quaternion(0.466553, 0.113811, -0.0432279, 0.876074)
bones/23/rotation = Quaternion(0.391494, 0.15314, 0.187694, 0.887723)
bones/25/position = Vector3(-0.00424433, 0.00243284, 0.011235)
bones/25/rotation = Quaternion(0.552334, -0.504123, -0.208749, -0.630248)
bones/25/scale = Vector3(1, 1, 1)
bones/26/rotation = Quaternion(0.512353, -0.0596674, 0.0704985, 0.853794)
bones/27/rotation = Quaternion(0.645205, 0.0320908, -0.0777809, 0.759362)
bones/29/position = Vector3(-0.00383773, 0.00194428, 0.0233676)
bones/29/rotation = Quaternion(0.489511, -0.552927, -0.26341, -0.620698)
bones/29/scale = Vector3(1, 1, 1)
bones/30/rotation = Quaternion(0.358305, -0.108292, -0.0373904, 0.926549)
bones/31/rotation = Quaternion(0.778525, 0.0561427, -0.0868845, 0.619029)
bones/31/scale = Vector3(1, 1, 1)
bones/33/position = Vector3(-0.00663568, 0.00131766, 0.0321011)
bones/33/rotation = Quaternion(0.386839, -0.572494, -0.383353, -0.6129)
bones/33/scale = Vector3(1, 1, 1)
bones/34/rotation = Quaternion(0.466553, -0.113811, 0.0432279, 0.876074)
bones/34/scale = Vector3(1, 1, 1)
bones/35/rotation = Quaternion(0.493778, -0.220552, 0.0175531, 0.840971)
bones/35/scale = Vector3(1, 1, 1)

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("%Alien")
tree_root = SubResource("AnimationNodeBlendTree_lnq6v")
anim_player = NodePath("../Alien/AnimationPlayer")

[connection signal="findtarget" from="." to="." method="_on_findtarget"]
[connection signal="area_entered" from="Area3D" to="." method="onAreaEntered"]

[editable path="Doctor1"]
[editable path="Alien"]
